corrected width percentages on main elements and added main section spacing

--- a/assets/style.css
+++ b/assets/style.css
@@ -4,6 +4,10 @@
   box-sizing: border-box;
 }
 
+body{
+  background-color: white;
+}
+
 header {
 width: 100%;
 height: 100px;
@@ -26,7 +30,6 @@ h1 {
 }
 
 nav {
-  position:relative;
   display: flex;
   flex-direction: row;
   justify-content: flex-end;
@@ -34,11 +37,8 @@ nav {
   height: 50px;
   margin-right: 5%;
 }
-/* need to fix the spacing of the nav items */
-nav a {
 
-  display: flex;
-  justify-content: flex end;
+.header-link {
   text-decoration: none;
   text-align: center;
   color: rgb(78, 221, 209);
@@ -56,9 +56,6 @@ nav a {
 }
 
 main {
-display: flex;
-flex-wrap: wrap;
-flex-direction: row;
 font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
 
@@ -70,24 +67,22 @@ flex-direction: row;
 font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
 
-.about-me {
+.main-header {
 padding: 20px 40px 0px 0px;
 margin: 40px 0px;
 width: 20%;
-background-color: white;
 text-align: right;
 color: rgb(20, 67, 105);
 font-size: 50px;
 font-weight: 100;
-
 }
 
 .content {
   width: 80%;
-  padding: 20px 5% 20px 5%;
+  padding: 5px 5% 5px 5%;
   flex: 1 0;
   border-left: 6px solid rgb(20, 67, 105);
-  margin: 40px 0px 0px 0px;
+  margin: 40px 0px 40px 0px;
 }
 
 /* Work Section */
@@ -95,7 +90,6 @@ font-weight: 100;
 padding: 20px 40px 0px 0px;
 margin: 40px 0px;
 width: 350px;
-background-color: white;
 text-align: right;
 color: rgb(20, 67, 105);
 font-size: 50px;
@@ -106,13 +100,12 @@ font-weight: 100;
 p {
   word-wrap: normal;
   margin-bottom: 25px;
+  line-height: 1.6;
 }
 
 .feature-project {
-  width: 100%;
-  border: 3px solid red;
+  width: 1200px;
   display:flex;
-  flex-direction: column;
   flex: 2 1;
   border: 7px solid rgb(78, 221, 209);
 }
@@ -123,5 +116,9 @@ p {
   display:flex;
   flex-direction: column;
   border: 20px solid rgb(78, 221, 209);
+}
+
+.contact-information {
+
 }
 
